[package]
name = "nyumt-client-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = [ "full" ] }
clap = "3.1.0"
nyumt-client-core = { path = "../nyumt-client-core" }
nyumt-proto = { path = "../nyumt-proto" }
rpassword = "5.0.1"
rustyline = "9.1.0"
shellwords = "1.1.0"
sqlx = { version = "0.5.9", features = [ "sqlite", "runtime-tokio-rustls" ] }
futures = "0.3.19"
borsh = "0.9.2"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }

plotly = "0.7.0"
wry = "0.14.0"
