[package]
name = "nyumt-client-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = [ "full" ] }
deadpass = { git = "https://codeberg.org/zesty/deadpass" }
rkyv = "0.7.24"
ed25519-dalek = "1.0.1"
rand_1 = { package = "rand", version = "0.7" }
nyumt-proto = { path = "../nyumt-proto" }
base58 = "0.2.0"
base64 = "0.13.0"
sqlx = { version = "0.5.9", features = [ "sqlite", "runtime-tokio-rustls" ] }
tracing = "0.1"
futures = "0.3.19"
borsh = "0.9.2"
dirs = "4.0"
lazy_static = "1.4.0"
libp2p = { version = "0.43.0", features = [ "tcp-tokio", "dns-tokio" ] }
async-trait = "0.1.52"
async-stream = "0.3.2"
chrono = "0.4"
