[package]
name = "nyumt-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nyumt-proto = { path = "../nyumt-proto" }

# p2p
libp2p = { version = "0.43.0", features = [ "tcp-tokio", "dns-tokio" ] }

# networking
pnet = "0.29.0"

# async
tokio = { version = "1.17.0", features = [ "full" ] }
async-stream = "0.3.2"
futures = "0.3.19"
futures-util = "0.3.21"
async-trait = "0.1.52"

# database backend
sqlx = { version = "0.5.9", features = [ "sqlite", "runtime-tokio-rustls" ] }

# miscellaneous
dirs = "4.0"
clap = "3.0.0-beta.4"
zeroize = { version = "1.4.3" }
rand = { version = "0.8.4", features = [ "getrandom" ] }
lazy_static = "1.4.0"
bytes = "1.1.0"
chrono = "0.4"

# logs
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = [ "env-filter" ] }
tracing-futures = "0.2.5"

# structure serialization
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
borsh = "0.9.2"

# encoding
base64 = "0.13.0"
base58 = "0.2.0"

# crypto
sha2 = "0.10.1"
