[package]
name = "nyumt-proto"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.17.0", features = [ "full" ] }
futures = "0.3.19"
async-stream = "0.3.2"
borsh = "0.9.2"
libp2p = "0.43.0"
base58 = "0.2.0"
sha2 = "0.10.1"
sqlx = { version = "0.5.9", features = [ "sqlite", "runtime-tokio-rustls" ] }
lazy_static = "1.4.0"
tracing = "0.1"
systemstat = { path = "../systemstat/" }
chrono = "0.4"
regex = "1.5.5"
async-compression = { version = "0.3.12", features = [ "zstd", "tokio" ] }
enum-iterator = "0.7.0"
strum = { version = "0.24", features = ["derive"] }
pnet = "0.29.0"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
